--- a/app/src/main/res/layout/activity_scientific_calculator.xml
+++ b/app/src/main/res/layout/activity_scientific_calculator.xml
@@ -4,10 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".ScientificCalculator"
     tools:showIn="@layout/activity_scientific_calculator">
@@ -19,7 +17,7 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:editable="false"
+        android:inputType="none"
         android:textAlignment="textEnd"
         android:gravity="end"/>
 
@@ -30,15 +28,21 @@
         android:layout_below="@+id/editText"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:editable="false"
+        android:inputType="none"
+        android:layout_marginBottom="16dp"
         android:textAlignment="textEnd"
         android:gravity="end"/>
 
+    <RelativeLayout
+        android:layout_below="@+id/editText2"
+        android:id="@+id/functionLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/square"
-        android:layout_below="@+id/editText2"
+
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:text="@string/square"
@@ -166,12 +170,14 @@
         android:onClick="onClick"
         android:textAllCaps="false"/>
 
+    </RelativeLayout>
+
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="7"
         android:id="@+id/num7"
-        android:layout_below="@+id/toggle"
+        android:layout_below="@+id/functionLayout"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:onClick="onClick"/>
@@ -289,14 +295,18 @@
         android:nestedScrollingEnabled="false"
         android:onClick="onClick" />
 
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="wrap_content"
+        android:layout_below="@+id/functionLayout"
+        android:layout_toRightOf="@+id/num9"
+        android:layout_toEndOf="@+id/num9"
+        android:layout_height="wrap_content">
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/divide"
         android:id="@+id/divide"
-        android:layout_above="@+id/num6"
-        android:layout_toRightOf="@+id/num9"
-        android:layout_toEndOf="@+id/num9"
         android:onClick="onClick" />
 
     <Button
@@ -304,9 +314,6 @@
         android:layout_height="wrap_content"
         android:text="x"
         android:id="@+id/multiply"
-        android:layout_above="@+id/num3"
-        android:layout_alignLeft="@+id/divide"
-        android:layout_alignStart="@+id/divide"
         android:onClick="onClick" />
 
     <Button
@@ -314,9 +321,6 @@
         android:layout_height="wrap_content"
         android:text="-"
         android:id="@+id/minus"
-        android:layout_above="@+id/dot"
-        android:layout_alignLeft="@+id/multiply"
-        android:layout_alignStart="@+id/multiply"
         android:textSize="20dp"
         android:onClick="onClick" />
 
@@ -325,10 +329,16 @@
         android:layout_height="wrap_content"
         android:text="+"
         android:id="@+id/plus"
-        android:layout_alignBottom="@+id/dot"
-        android:layout_alignLeft="@+id/minus"
-        android:layout_alignStart="@+id/minus"
         android:onClick="onClick" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/mode1"
+        android:id="@+id/mode"
+        android:onClick="onClick"
+        android:textAllCaps="false"/>
+    </LinearLayout>
 
     <Button
         android:layout_width="wrap_content"
@@ -360,16 +370,7 @@
         android:layout_toEndOf="@+id/openBracket"
         android:onClick="onClick"/>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/mode1"
-        android:id="@+id/mode"
-        android:layout_alignBottom="@+id/equal"
-        android:layout_toRightOf="@+id/equal"
-        android:layout_toEndOf="@+id/equal"
-        android:onClick="onClick"
-        android:textAllCaps="false"/>
+
 
     <Button
         android:layout_width="match_parent"
