--- a/app/src/main/res/layout/activity_digit_conversion.xml
+++ b/app/src/main/res/layout/activity_digit_conversion.xml
@@ -15,9 +15,24 @@ tools:context="com.example.it_irine.bdtutorialzone.DigitConversionActivity">
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
-       />
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:gravity="center_vertical"
+            android:layout_width="wrap_content"
+            android:orientation="horizontal"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:src="@drawable/bdtutorial"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:layout_marginLeft="16dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/colorWhite"
+                android:text="BD TUTORIAL ZONE"/>
+        </LinearLayout>
+    </android.support.v7.widget.Toolbar>
 
 </android.support.design.widget.AppBarLayout>
 
@@ -33,7 +48,7 @@ tools:context="com.example.it_irine.bdtutorialzone.DigitConversionActivity">
         android:layout_height="match_parent"
          android:gravity="center"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:context="com.example.it_irine.bdtutorialzone.DigitConversionActivity"
+
         >
 
         <Button
