--- a/app/src/main/res/layout/activity_unit_weight.xml
+++ b/app/src/main/res/layout/activity_unit_weight.xml
@@ -8,18 +8,33 @@
     tools:context="com.example.it_irine.bdtutorialzone.DigitConversionActivity">
 
     <android.support.design.widget.AppBarLayout
+        android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         >
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            />
+            android:layout_height="match_parent">
+            <LinearLayout
+                android:gravity="center_vertical"
+                android:layout_width="wrap_content"
+                android:orientation="horizontal"
+                android:layout_height="wrap_content">
+                <ImageView
+                    android:src="@drawable/bdtutorial"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+                <TextView
+                    android:layout_marginLeft="16dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/colorWhite"
+                    android:text="BD TUTORIAL ZONE"/>
+            </LinearLayout>
+        </android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
-
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -28,7 +43,7 @@
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:context="com.example.it_irine.bdtutorialzone.DigitConversionActivity">
+        >
 
         <EditText
             android:layout_width="match_parent"
@@ -44,8 +59,8 @@
             android:layout_height="wrap_content"
             android:id="@+id/spinner1"
             android:layout_below="@+id/item1"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
             android:entries="@array/weight"/>
 
         <EditText
@@ -62,8 +77,8 @@
             android:layout_height="wrap_content"
             android:id="@+id/spinner2"
             android:layout_below="@+id/item2"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
             android:entries="@array/weight"/>
 
         <Button
